@@ -42,6 +42,7 @@
     clear hal build warnings for debian build issue #363
     x-terminal-emulator link resolved, added to terminals list #358
     drag to same dir sets auto drag action copy #304 #336
+    Dialog fix segfault with --chooser filespec #320
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
